--- a/index.html
+++ b/index.html
@@ -10,33 +10,56 @@
         <title>Dado</title>
         <meta name="description" content="Ovo je moj prvi web sajt!">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="keywords" content="Daniel Milic, Dado, Milic, Daniel, gljive, piskorevci, nk ratar, ratar, djakovo, dakovo">
+        <meta name="author" content="Daniel Milic">
         <link rel="stylesheet" href="">
+      
     </head>
     <body>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1 class="title">Dobrodosli u carstvo gljiva, grad gljiva</h1>
+        <div class="wrapper">
+            <h1 class="title">Dobrodosli u carstvo gljiva, grad gljiva</h1>
+            <h2 class="subtitle">Dado Milic zvani <span>gljivar</span></h2>
+        </div>
         <img src="./slika.png" class="image"  />
         <script src="" async defer></script>
     </body>
 </html>
 
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&display=swap');
+
     body {
         margin: 0;
+        font-family: 'Crimson Text', serif;
     }
 
-  .title {
+  .wrapper {
     color: white;
-    font-size: 50px;
     text-align: center;
     height: 100vh;
     width: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-top: -100px;
+  }
+
+  .title {
+    font-size: 50px;
+    margin-bottom: 0;
+    text-transform: uppercase;
+  }
+
+  .subtitle {
+    font-size: 28px;
+  }
+
+  .subtitle span {
+    color: crimson;
   }
 
   .image {
